vlib/v/checker/tests/assign_deref_fn_call_on_left_side_err.vv
struct Foo {}

fn foo(s string) &Foo {
	return &Foo{}
}

fn main() {
	*foo('s') = 1
}
